akka-javasdk-annotation-processor-tests/component-validation-descriptors/src/test/resources/test-sources/valid/ValidHttpEndpointWithRootPath.java
package com.example;

import akka.javasdk.annotations.http.HttpEndpoint;
import akka.javasdk.annotations.http.Get;

@HttpEndpoint("/")
public class ValidHttpEndpointWithRootPath {

  @Get("/")
  public String root() {
    return "root";
  }

  @Get("a")
  public String a() {
    return "a";
  }

  @Get("/b")
  public String b() {
    return "b";
  }
}
